--- a/src/app/components/reservation/reservation.component.html
+++ b/src/app/components/reservation/reservation.component.html
@@ -28,6 +28,6 @@
         </div>
     </div>
     <div class = "calendar-container">
-        <app-calendar></app-calendar>
+        <app-calendar [user]="doctor!"></app-calendar>
     </div>
 </div>
