--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div class="calendar-container">
-            <app-calendar></app-calendar>
+            <app-calendar [user]="doctor ?? patient"></app-calendar>
         </div>
     </div>
     <div *ngIf="adminLogin" class="admin-profile-container">
