--- a/src/app/components/calendar/calendar.component.css
+++ b/src/app/components/calendar/calendar.component.css
@@ -1,31 +1,116 @@
 .calendar-container {
     display: flex;
     flex-direction: column;
-    gap: 16px;
-    font-family: Arial, sans-serif;
+    font-family: 'FiraGO';
     margin: 0 auto;
     max-width: 800px;
+    width: 830.5px;
+    height: 655px;
 }
 
 .month-year-display {
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 8px;
-}
-
-.month-navigation, .week-navigation {
     display: flex;
-    justify-content: space-between;
+    margin-left: 49px;
+    margin-bottom: 31px;
 }
 
-button {
-    padding: 8px 16px;
-    font-size: 14px;
+.current-year-display{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 43px;
+    font-family: 'FiraGO';
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 21.6px;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #053354;
+}
+
+.current-month-display{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.current-month-text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 140px;
+    height: 35px;
+    border-radius: 50px;
+    border: 1px solid #18A4E14D;
+    font-family: 'FiraGO';
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 21.6px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #18A4E1;
+}
+
+.change-month-button{
+    width: 35px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #FFFFFF;
+    border-radius: 35px;
+    box-shadow: 0px 4px 10px 0px #0533540D;
+}
+
+#next-month-icon{
+    rotate: 180deg;
+    padding-right: 2px;
+}
+
+.prev-week-button{
+    width: 21px;
+    height: 21px;
+    margin-right: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #ECF2F8;
+    border-radius: 21px;
+}
+
+.next-week-button{
+    width: 21px;
+    height: 21px;
+    margin-left: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #ECF2F8;
+    border-radius: 21px;
+    rotate: 180deg;
+}
+
+.prev-week-button:hover{
+    background-color: white;
+}
+
+.next-week-button:hover{
+    background-color: white;
+}
+
+.week-navigation{
+    width: 130px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+ button {
     cursor: pointer;
-    border: 1px solid #ddd;
-    background-color: #f8f8f8;
-    border-radius: 4px;
+    border: none;
 }
 
 button:hover {
@@ -33,48 +118,71 @@ button:hover {
 }
 
 .calendar-grid {
-    display: grid;
-    grid-template-columns: 100px repeat(7, 1fr);
-    border: 1px solid #ccc;
-    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    height: auto;
+    border-radius: 10px;
     overflow: hidden;
+    background-color: #fff;
+    box-shadow: 0px 4px 30px 0px #0533540D;
 }
 
-.header-row, .timeslot-row {
-    display: contents;
+.header-row{
+    width: auto;
+    height: auto;
+    display: flex;
+    background-color: #ECF2F8;
+}
+
+.timeslot-row {
+   width: auto;
+   height: auto; 
+   display: flex;
 }
 
 .header-cell {
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    padding: 8px;
-    text-align: center;
-    font-weight: bold;
+    width: 100px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.empty-cell {
-    background-color: #fff;
-    border: none;
+.header-cell .date{
+    color: #18A4E1;
+}
+
+.header-cell .day{
+    color: #053354;
 }
 
 .timeslot-cell {
-    background-color: #f8f8f8;
-    border: 1px solid #ccc;
+    width: 130px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 1px solid #ECF2F8;
+    border-right: 1px solid #ECF2F8;
+    background-color: white;
     text-align: center;
-    font-weight: bold;
+    color: #053354;
 }
 
 .grid-cell {
-    border: 1px solid #ccc;
+    width: 100px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 1px solid #ECF2F8;
+    border-right: 1px solid #ECF2F8;
     text-align: center;
     cursor: pointer;
     transition: background-color 0.3s;
 }
 
-.grid-cell:hover {
-    background-color: #f0f0f0;
-}
-
-.grid-cell:active {
+.grid-cell:hover{
     background-color: #e0e0e0;
 }
