1. Implement AddReservation functionality 2. Add CalendarReservation component 3. Update CalendarReservation functionality

--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -35,8 +35,7 @@
         <div class="timeslot-cell">{{ timeslot }}</div>
         <div class="grid-cell" *ngFor="let weekday of weekdays" (click)="addReservation(weekday.date, timeslot)">
           <div *ngIf="isReserved(weekday.date, timeslot)" class="reserved-cell">
-            <!-- TODO think about a calendar cell as separate component -->
-             content
+            <app-calendar-reservation [currentReservation]="getReservationByTimeSlot(formatDate(weekday.date, timeslot))"></app-calendar-reservation>
           </div>
         </div>
       </div>
