--- a/src/app/components/calendar-reservation/calendar-reservation.component.css
+++ b/src/app/components/calendar-reservation/calendar-reservation.component.css
@@ -1,35 +1,42 @@
-.own-reservation{
+.reservation-container{
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    border-radius: 5px;
     font-family: 'FiraGO';
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 400;
     line-height: 16.8px;
     text-align: center;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
+}
+
+.patient-own-reservation{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: inherit;
+    color: #3ACF99;
+    background-color: #DAFAEE;
+}
+
+.doctor-own-reservation{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: inherit;
     color: #3ACF99;
     background-color: #DAFAEE;
 }
 
 .other-reservation{
-    width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-family: 'FiraGO';
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 16.8px;
-    text-align: center;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
+    width: 100%;
+    border-radius: inherit;
     color: black;
-    background-color: #FF93A6;
+    background: #FF93A6;
 }
