--- a/src/app/components/calendar/calendar.component.css
+++ b/src/app/components/calendar/calendar.component.css
@@ -179,15 +179,45 @@ button:hover {
     border-bottom: 1px solid #ECF2F8;
     border-right: 1px solid #ECF2F8;
     text-align: center;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.grid-cell:hover{
-    background-color: #e0e0e0;
 }
 
 .reserved-cell{
     width: 100%;
     height: 100%;
+}
+
+.not-reserved-cell{
+    width: 100%;
+    height: 100%;
+}
+
+.weekend-cell{
+    width: 100%;
+    height: 100%;
+    background: #FFFFF5;
+}
+
+.weekday-cell{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    font-family: 'FiraGO';
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16.8px;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #0533544D;
+    transition: background-color 0.2s;
+}
+
+.weekday-cell:hover{
+    background-color: #e0e0e0;
+}
+
+.weekday-cell span{
+    color: #3ACF99;
 }
