--- a/src/app/components/display-message/display-message.component.css
+++ b/src/app/components/display-message/display-message.component.css
@@ -3,6 +3,7 @@
     top: 10%;
     left: 50%;
     transform: translate(-50%, -50%);
+    border: 1px solid #18A4E1;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 1000;
