--- a/src/app/components/calendar/calendar.component.css
+++ b/src/app/components/calendar/calendar.component.css
@@ -1,8 +1,17 @@
+.calendar-and-buttons-reservation{
+    display: flex;
+}
+
+.calendar-and-buttons-profile{
+    display: flex;
+    flex-direction: column;
+}
+
+
 .calendar-container {
     display: flex;
     flex-direction: column;
     font-family: 'FiraGO';
-    margin: 0 auto;
     max-width: 800px;
     width: 830.5px;
     height: 655px;
@@ -220,4 +229,68 @@ button:hover {
 
 .weekday-cell span{
     color: #3ACF99;
+}
+
+.calendar-buttons-reservation{
+    height: 100%;
+    width: auto;
+    margin-top: 68px;
+    margin-left: 30px;
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.calendar-buttons-profile{
+    height: 100%;
+    width: auto;
+    margin-top: -30px;
+    margin-right: 30px;
+    display: flex;
+    align-self: flex-end;
+}
+
+.edit-doctor-button-container{
+    width: 230px;
+    height: 50px;
+    margin-right: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'FiraGO';
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 21.6px;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    border-radius: 50px;
+    color: #18A4E1;
+    background: #ECF2F8;
+    cursor: pointer;
+}
+
+.edit-doctor-button{
+    margin-left: 10px;
+}
+
+.delete-doctor-button-container{
+    width: 170px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'FiraGO';
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 21.6px;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    border-radius: 50px;
+    color: #FFFFFF;
+    background: #FF93A6;
+    cursor: pointer;
+}
+
+.delete-doctor-button{
+    margin-left: 12px;
 }
