--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -38,8 +38,21 @@
           <div *ngIf="!isReserved(weekday.date, timeslot)" class="not-reserved-cell">
             <div *ngIf="weekday.dayLabel === '( შაბ )' || weekday.dayLabel === '( კვი )'" class="weekend-cell">
             </div>
-            <div *ngIf="weekday.dayLabel !== '( შაბ )' && weekday.dayLabel !== '( კვი )' && router.url.includes('/reservation')" class="weekday-cell" (click)="addReservation(weekday.date, timeslot)">
+            <div *ngIf="weekday.dayLabel !== '( შაბ )' && weekday.dayLabel !== '( კვი )' && router.url.includes('/reservation')" (click)="openDescriptionForm(weekday.date, timeslot, $event)" class="weekday-cell" >
               <span>+</span>&nbsp;დაჯავშნა
+            </div>
+            <div *ngIf="descriptionFormOpen">
+              <div class="overlay" (click)="descriptionFormOpen = false"></div>
+              <div class="description-form-container" [ngStyle]="descriptionStyle">
+                <div class="description-form-header">
+                  <span class="green-text">გსურთ ვიზიტის დაჯავშნა?</span>
+                  <span class="blue-text">შეგიძლიათ მიუთითოთ თქვენი პრობლემა</span>
+                </div>
+                <div class="description-content">
+                  <textarea #description class="description-input" type="text" placeholder="აღწერა..."></textarea>
+                </div>
+                <div class="reserve-button" (click)="addReservation(selectedDate, selectedTimeslot, description.value)">დაჯავშნა</div>
+              </div>
             </div>
           </div>
           <div *ngIf="isReserved(weekday.date, timeslot)" class="reserved-cell">
