--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -44,14 +44,13 @@
                     <span class="change-password-field" (click)="ToggleChangePassword()">პაროლის შეცვლა</span>
                     <app-change-password *ngIf="changePasswordOpen" [user]="doctor ?? patient" (toggle)="ToggleChangePassword()"></app-change-password>
                 </div>
-                <!-- TODO init these numbers dynamically -->
                 <div *ngIf="doctor" class="field-body">
                     <span class="field-name">დაჯავშნილია:</span>
-                    <span class="field-value">({{20}})</span>
+                    <span class="field-value">({{this.reservations!.length}})</span>
                 </div>
                 <div *ngIf="patient" class="field-body">
                     <span class="field-name">ჩემი ჯავშანი:</span>
-                    <span class="field-value">({{1}})</span>
+                    <span class="field-value">({{this.reservations!.length}})</span>
                 </div>
             </div>
         </div>
