--- a/src/app/components/calendar-reservation/calendar-reservation.component.css
+++ b/src/app/components/calendar-reservation/calendar-reservation.component.css
@@ -11,6 +11,13 @@
     text-decoration-skip-ink: none;
 }
 
+.active-reservation{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 .patient-own-reservation{
     height: 100%;
     width: 100%;
@@ -31,6 +38,48 @@
     border-radius: inherit;
     color: #3ACF99;
     background-color: #DAFAEE;
+}
+
+.edit-reservation-button{
+    width: 18px;
+    height: 18px;
+    margin-top: 2px;
+    margin-right: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    align-self: flex-end;
+    border-radius: 18px;
+    z-index: 10;
+    background-color: white;
+    cursor: pointer;
+}
+
+.edit-button{
+    width: 15px;
+    height: 15px;
+}
+
+.delete-reservation-button{
+    width: 18px;
+    height: 18px;
+    margin-top: 2px;
+    margin-right: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    align-self: flex-end;
+    border-radius: 18px;
+    z-index: 10;
+    background-color: white;
+    cursor: pointer;
+}
+
+.delete-button{
+    width: 10px;
+    height: 10px;
 }
 
 .other-reservation{
