1. Add check if user is making a reservation 2. Update doctor info on admin page 3. Add new error message

--- a/src/app/components/edit-doctor/edit-doctor.component.html
+++ b/src/app/components/edit-doctor/edit-doctor.component.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="field-text">
                     <span class="field-name">დაჯავშნილია:</span>
-                    <span class="field-value">({{20}})</span>
+                    <span class="field-value">({{this.reservations!.length}})</span>
                 </div>
             </div>
         </div>
